--- a/contratado.html
+++ b/contratado.html
@@ -80,8 +80,8 @@
             Meu objetivo é ajudar você a encontrar aquela oportunidade incrível na área tech, desde sua primeira oportunidade ou até achar um novo desafio.
             <br>Se quiser bater um papo, falar sobre oportunidades ou outras coisas, é só chamar em qualquer rede social! (link logo abaixo)
             <br><br>
-            A tecnologia reinventará os negócios, mas as relações humanas continuarão sendo a chave do sucesso
-            <br> - Stephen Covey         
+            Conheça todas as teorias, domine todas as técnicas, mas ao tocar uma alma humana, seja apenas outra alma humana.
+            <br> - Carl Jung       
           
           </p>
           <h2 class="subtitulo">Curiosidades</h2><br/>
