--- a/contratado.html
+++ b/contratado.html
@@ -82,10 +82,9 @@
             <br><br>
             Conheça todas as teorias, domine todas as técnicas, mas ao tocar uma alma humana, seja apenas outra alma humana.
             <br> - Carl Jung       
-          
+          <br><br><br>
           </p>
           <h2 class="subtitulo">Curiosidades</h2><br/>
-          <p class="descricao">
             <ul >
               <li class="descricao">
                 - Eu amo jogar videogame, assistir série;
@@ -156,7 +155,7 @@
             <li class="projects-item">
               <h1 class="titulo">Talentos Tech 🖥️ </h1>
               <p class="descricao">
-                Caso não encontre uma vaga, entre no link e preencha o forms é rapidinho!
+                Caso não encontre uma vaga, entre no link e preencha o forms, é rapidinho!
               </p>
               <div class="links-group">
                 <button type="button">
