--- a/contratado.html
+++ b/contratado.html
@@ -77,7 +77,7 @@
           <p class="descricao">
             <br>Eai Geek!
             <br> Eu sou Sealtiey, mas todos me chamam de Salty, sou pós-graduada em RH e especialista em recrutamento de devs (ou geeks como preferir hahah).
-            Meu objetivo é ajudar você a encontrar aquela oportunidade incrível na área tech, desde sua primeira oportunidade ou até achar um novo desafio.
+            Meu objetivo é ajudar você a encontrar aquela oportunidade incrível na área tech, sendo ela a primeira oportunidade ou um novo desafio.
             <br>Se quiser bater um papo, falar sobre oportunidades ou outras coisas, é só chamar em qualquer rede social! (link logo abaixo)
             <br><br>
             Conheça todas as teorias, domine todas as técnicas, mas ao tocar uma alma humana, seja apenas outra alma humana.
