--- a/contratar.html
+++ b/contratar.html
@@ -52,7 +52,7 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i style="color: #b908a1" class="bx bx-home"></i> <span>Inicio</span></a></li>
+          <li><a href="#hero" class="nav-link scrollto active"><i style="color: #b908a1" class="bx bx-home"></i> <span>Início</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i style="color: #b908a1" class="bx bx-user"></i> <span>Sobre</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i style="color: #b908a1" class="bx bx-file"></i> <span>Resumo</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i style="color: #b908a1" class="bx bx-envelope"></i> <span>Contato</span></a></li>
@@ -111,7 +111,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong><a target="_blank"
-                        href="./assets/curriculo/cv-sealtiey.pdf">Curriculo</a></strong></li>
+                        href="./assets/curriculo/cv-sealtiey.pdf">Currículo</a></strong></li>
                 </ul>
               </div>
               <hr>
