--- a/contratar.html
+++ b/contratar.html
@@ -117,8 +117,8 @@
               <hr>
 
               <div class="col-lg-12">
-                Sou Sealtiey, mas pode me chamar de Salty, acredito que as pessoas são o maior ativo de uma organização 
-                e por este motivo, devem ser respeitadas, valorizadas, reconhecidas e acolhidas, desde o processo seletivo. 
+                Sou Sealtiey, mas pode me chamar de Salty. Acredito que as pessoas são o maior ativo de uma organização 
+                e por este motivo devem ser respeitadas, valorizadas, reconhecidas e acolhidas, desde o processo seletivo. 
               </div>
 
             </div>
@@ -204,8 +204,8 @@
                 <em>
                   Sou graduada em Processos Gerenciais,                   
                   possuo MBA em RH e atualmente estou cursando Psicologia.
-                   <br> Atuo há mais de 5 anos na área de gestão de projetos, gestão de pessoas e recursos humanos, 
-                   tendo como principal função recrutamento e seleção, atuando há 2 anos focada na área de TI.
+                   <br> ATrabalho há mais de 5 anos na área de gestão de projetos, gestão de pessoas e recursos humanos, 
+                   tendo como principal função o recrutamento e seleção, atuando há 2 anos focada na área de TI. 
                 </em>
               </p>
             </div>
