--- a/contratar.html
+++ b/contratar.html
@@ -204,7 +204,7 @@
                 <em>
                   Sou graduada em Processos Gerenciais,                   
                   possuo MBA em RH e atualmente estou cursando Psicologia.
-                   <br> ATrabalho há mais de 5 anos na área de gestão de projetos, gestão de pessoas e recursos humanos, 
+                   <br> Trabalho há mais de 5 anos na área de gestão de projetos, gestão de pessoas e recursos humanos, 
                    tendo como principal função o recrutamento e seleção, atuando há 2 anos focada na área de TI. 
                 </em>
               </p>
