--- a/contratado.html
+++ b/contratado.html
@@ -76,7 +76,7 @@
           <h1 class="titulo">Quem sou eu?</h1>
           <p class="descricao">
             <br>Eai Geek!
-            <br> Eu sou Sealtiey, mas todos me chamam de Salty, sou pós-graduada em RH e especialista em recrutamento de devs (ou geeks como preferir hahah).
+            <br> Eu sou Sealtiey, mas todos me chamam de Salty. Sou pós-graduada em RH e especialista em recrutamento de devs (ou geeks como preferir hahah).
             Meu objetivo é ajudar você a encontrar aquela oportunidade incrível na área tech, sendo ela a primeira oportunidade ou um novo desafio.
             <br>Se quiser bater um papo, falar sobre oportunidades ou outras coisas, é só chamar em qualquer rede social! (link logo abaixo)
             <br><br>
@@ -87,7 +87,7 @@
           <h2 class="subtitulo">Curiosidades</h2><br/>
             <ul >
               <li class="descricao">
-                - Eu amo jogar videogame, assistir série;
+                - Eu amo jogar videogame, assistir série e viajar;
               </li>
               <li class="descricao">
                 - Amo escutar música enquanto trabalho;
