--- a/contratar.html
+++ b/contratar.html
@@ -250,7 +250,7 @@
               
             </div>
             <div class="resume-item">
-              <h4>AUXILIAR DE RH</h4>
+              <h4>AUXILIAR DE RH E ADM</h4>
               <p><em>Bio Assessoria Ambiental 07/2016 - 08/2021</em></p>
               
             </div>
