--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 background-color: #950b82;
                 padding: 22px 79px;
                 font-size: inherit;
-                box-shadow: 0px 0px 5px 1px white;">Quero ser contratado</a></div>
+                box-shadow: 0px 0px 5px 1px white;">Quero ser contratado!</a></div>
               <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0"><a  href="./contratar.html" class="btn" style="
                 margin-top: 10%;
                 color: white;
                 background-color: #1c1e6c;
                 padding: 22px 79px;
                 font-size: inherit;
-                box-shadow: 0px 0px 5px 1px white;">Quero contratar</a></div>
+                box-shadow: 0px 0px 5px 1px white;">Quero contratar!</a></div>
             </div>
 			<br>
     </div>
