--- a/contratado.html
+++ b/contratado.html
@@ -132,7 +132,7 @@
       <section class="projetos section" id="projetos">
         <div class="container">
           <h1 class="titulo">Vagas</h1><br/>
-          <p class="descricao">Eai geeks abaixo você verá as vagas quentinhas que estão esperando por você! </p>
+          <p class="descricao">Eai geeks, abaixo você verá as vagas quentinhas que estão esperando por você! </p>
 
           <ul class="projects-list">
             <!-- para criar mais vagas basta copiar e colar toda essa tag <li> seja feliz!-->
