--- a/contratar.html
+++ b/contratar.html
@@ -112,6 +112,9 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong><a target="_blank"
                         href="./assets/curriculo/cv-sealtiey.pdf">Currículo</a></strong></li>
+                        <li><i class="bi bi-chevron-right"></i> <strong><a target="_blank"
+                          href="./assets/curriculo/DISC.pdf">Teste DISC</a></strong></li>
+                  </ul>
                 </ul>
               </div>
               <hr>
