--- a/contratar.html
+++ b/contratar.html
@@ -218,7 +218,8 @@
             <div class="resume-item">
 
               <h4>TECH RECRUITER PLENO</h4>
-              <p><em>SONDA Dez/2021 - Atualmente</em></p>
+              <p style="margin-bottom: -4px;"><em>SONDA</em></p>
+              <p><em>Dez/2021 - Atualmente</em></p>
               <p><em>Ampla atuação e vivência em processos seletivos de profissionais para os mais variados segmentos, como Desenvolvimento (Backend, Frontend e FullStack), Infraestrutura, Software, Banco de Dados, Projetos, Arquitetura e muitos outros., desde nível júnior até especialistas; 
                 Recrutamento e Seleção para contratos com empresas públicas e privadas;
                 Responsável pelo recrutamento end-to-end de profissionais de TI;
@@ -228,7 +229,8 @@
             </div>
             <div class="resume-item">
               <h4>HEADHUNTER TECH</h4>
-              <p><em>Talents RH Set/2021 - Nov/2021</em></p>
+              <p style="margin-bottom: -4px;"><em>Talents RH</em></p>
+              <p><em>Set/2021 - Nov/2021</em></p>
               <p><em>Recrutamento e Seleção para vagas da área de TI. Divulgação de vagas; Hunting Ativo; Seleção de CVs; Convocação de candidatos; Processo de Seleção; Avaliação Técnica e Comportamental; Feedback aos Candidatos e Clientes Requisitantes. 
                 Vagas de Júnior, Pleno, Sênior, Especialista. Devs e QA.            
                 </em></p>
@@ -237,14 +239,16 @@
             </div>
             <div class="resume-item">
               <h4>CONSULTORA EM RECRUTAMENTO E SELEÇÃO</h4>
-              <p><em>Consultoria Sônia Pego Jul/2021 - Nov/2021</em></p>
+              <p style="margin-bottom: -4px;"><em>Consultoria Sônia Pego</em></p>
+              <p><em>Jul/2021 - Nov/2021</em></p>
               <p><em>Atuação em vagas de todos os segmentos, com foco em Indústria. Hunting ativo de profissionais via LinkedIn e outras ferramentas; Entrevistas por competência; Feedbacks para clientes e candidatos.             
                 </em></p>
               
             </div>
             <div class="resume-item">
               <h4>AUXILIAR DE RH E ADM</h4>
-              <p><em>Bio Assessoria Ambiental Jul/2016 - Ago/2021</em></p>
+              <p style="margin-bottom: -4px;"><em>Bio Assessoria Ambiental</em></p>
+              <p><em>Jul/2016 - Ago/2021</em></p>
               <p><em>Responsável pelas seguintes atividades: Implementações para melhoria do ambiente de trabalho; 
                 Performance operacional e melhoria da organização dos trabalhos desenvolvidos; Elaboração de documentos para Licenciamentos Ambientais; 
                 Contas a pagar e receber.</em></p>
@@ -252,7 +256,8 @@
             </div>
             <div class="resume-item">
               <h4>JOVEM APRENDIZ</h4>
-              <p><em>Favorita Móveis e Eletros Jan/2012 - Dez/2015</em></p>
+              <p style="margin-bottom: -4px;"><em>Favorita Móveis e Eletros</em></p>
+              <p><em>Jan/2012 - Dez/2015</em></p>
               <p><em>Responsável pelas seguintes atividades: Implementações para melhoria do ambiente de trabalho; Auxiliar de recursos humanos;
                 Auxiliar de DP;
                 Cadastros de novos clientes, vendas; Contas a pagar e receber.
